package rec.slow.proto;

import "rec/gui/RecentFiles.proto";
import "rec/slow/LoopWindow.proto";
import "rec/widget/AudioThumbnail.proto";

message Preferences {
  optional slow.proto.LoopWindow loop_window = 1;
  optional widget.ThumbnailDescription thumbnail = 2;
  optional gui.RecentFiles recent_files = 3;
};
